# spicedb-embedded

./: .dockerignore  .gitattributes  .gitignore  .release-please-manifest.json  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  mise.toml  release-please-config.json  renovate.json  shared
.changeset/: add_shared_datastore_integration_tests_for_postgres_cockroachdb_mysql_spanner.md
.claude/: settings.local.json
.config/: dotnet-tools.json
.github/workflows/: ci.yml  publish-grpc-tonic.yml  publish.yml  release-legacy.yml  release-please.yml  release.yml  update-examples.yml  update-lockfiles.yml
csharp/: .editorconfig  EmbeddedSpiceDB.cs  EmbeddedSpiceDb.cs  README.md  SpiceDBException.cs  SpiceDBFFI.cs  SpiceDbEmbedded.csproj  SpiceDbEmbedded.sln  SpiceDbEmbedded.sln.DotSettings  SpiceDbFfi.cs  SpicedbEmbedded.csproj  SpicedbEmbedded.sln  TcpChannel.cs  UnixSocketChannel.cs
csharp/SpiceDbEmbedded.Tests/: EmbeddedSpiceDbTests.cs  SpiceDbEmbedded.Tests.csproj
csharp/SpicedbEmbedded.Tests/: EmbeddedSpiceDBTests.cs  SpicedbEmbedded.Tests.csproj
csharp/proto/: imports.proto
examples/csharp/google-docs/: GoogleDocsExample.csproj  Program.cs  README.md  Schema.cs  Server.cs
examples/csharp/google-docs/GoogleDocsExample.Tests/: DriveTest.cs  GoogleDocsExample.Tests.csproj
examples/java/google-docs/: README.md  pom.xml
examples/java/google-docs/src/main/java/com/borkfork/spicedb/examples/googledocs/: Main.java  Schema.java  Server.java
examples/java/google-docs/src/test/java/com/borkfork/spicedb/examples/googledocs/: DriveTest.java
examples/node/google-docs/: README.md  package-lock.json  package.json  tsconfig.json
examples/node/google-docs/src/: schema.ts  server.ts
examples/node/google-docs/tests/: drive.test.ts
examples/python/google-docs/: README.md  pyproject.toml
examples/python/google-docs/src/google_docs_example/: __init__.py  schema.py  server.py
examples/python/google-docs/tests/: test_drive.py
examples/rust/google-docs/: Cargo.toml  README.md
examples/rust/google-docs/src/: lib.rs  main.rs  schema.rs
examples/rust/google-docs/tests/: drive_test.rs
java/: README.md  pom.xml
java/proto/: imports.proto
java/src/main/java/com/borkfork/spicedb/embedded/: EmbeddedPermissionsStub.java  EmbeddedSchemaStub.java  EmbeddedSpiceDB.java  SpiceDB.java  SpiceDBException.java  SpiceDBFfi.java  SpiceDBLibraryPath.java  StartOptions.java  TcpChannel.java  UnixSocketChannel.java
java/src/main/java/com/rendil/spicedb/embedded/: EmbeddedSpiceDB.java  SpiceDB.java  SpiceDBException.java  StartOptions.java  TcpChannel.java  UnixSocketChannel.java
java/src/test/java/com/borkfork/spicedb/embedded/: EmbeddedSpiceDBTest.java
java/src/test/java/com/rendil/spicedb/embedded/: EmbeddedSpiceDBTest.java
java/src/test/resources/: logback-test.xml
node/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
node/proto/: imports.proto
node/src/: embedded.ts  ffi.ts  index.ts  tcp_channel.ts  unix_socket_channel.ts
node/tests/: embedded.test.d.ts  embedded.test.d.ts.map  embedded.test.js  embedded.test.js.map  embedded.test.ts
python/: README.md  hatch_build.py  pyproject.toml
python/proto/: imports.proto
python/src/spicedb_embedded/: __init__.py  embedded.py  errors.py  ffi.py  tcp_channel.py  unix_socket_channel.py
python/tests/: test_embedded.py
rust/: Cargo.toml  README.md  build.rs  deny.toml  knope.toml  tarpaulin.toml
rust/shared/c/: go.mod
rust/spicedb-api/: Cargo.toml  build.rs
rust/spicedb-api/proto/: buf.yaml  imports.proto
rust/spicedb-embedded-native-build/: Cargo.toml
rust/spicedb-embedded-native-build/src/: lib.rs
rust/spicedb-embedded-sys/: .gitignore  Cargo.toml  build.rs
rust/spicedb-embedded-sys-linux-arm64/: Cargo.toml  build.rs
rust/spicedb-embedded-sys-linux-arm64/src/: lib.rs
rust/spicedb-embedded-sys-linux-x64/: Cargo.toml  build.rs
rust/spicedb-embedded-sys-linux-x64/src/: lib.rs
rust/spicedb-embedded-sys-osx-arm64/: Cargo.toml  build.rs
rust/spicedb-embedded-sys-osx-arm64/src/: lib.rs
rust/spicedb-embedded-sys-win-x64/: Cargo.toml  build.rs
rust/spicedb-embedded-sys-win-x64/src/: lib.rs
rust/spicedb-embedded-sys/src/: instance.rs  lib.rs  memory.rs
rust/spicedb-grpc-tonic/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/spicedb-grpc-tonic/src/: lib.rs
rust/src/: ffi.rs  lib.rs  spicedb.rs
scripts/: ensure-shared.sh  generate-dll-import-lib.sh  lib-path.sh  regenerate-spicedb-grpc-tonic.sh  shared-c-build.sh  shared-c-rebuild.sh  stage-all-prebuilds.sh  stage-csharp-prebuild.sh  stage-java-prebuild.sh  stage-node-prebuild.sh  stage-python-prebuild.sh  stage-rust-platform-crate.sh  stage-rust-prebuild.sh  stage-shared-lib.sh
shared/c/: README.md  go.mod  go.sum  main.go  rpc.go  spicedb.def  streaming_proxy.go
