[project]
name = "spicedb-embedded"
version = "0.1.7"
description = "Embedded SpiceDB for Python — in-memory server via shared/c FFI + gRPC over Unix socket"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["authzed>=1.4.0", "grpcio>=1.60.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spicedb_embedded"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
