[package]
name = "spicedb-embedded"
version = "0.2.4"
edition = "2024"
description = "Embedded SpiceDB for Rust - embedded authorization using the standard gRPC API"
license = "Apache-2.0"
repository = "https://github.com/borkfork/spicedb-embedded"
documentation = "https://docs.rs/spicedb-embedded"
homepage = "https://github.com/borkfork/spicedb-embedded"
# Native library is built or downloaded by spicedb-embedded-sys.
exclude = ["**/*.so", "**/*.dylib", "**/*.dll", "**/*.lib"]
categories = [
  "authentication",
  "api-bindings",
  "development-tools",
  "development-tools::ffi",
  "security",
]
keywords = [
  "spicedb",
  "zanzibar",
  "authorization",
  "access-control",
  "fine-grained",
]

[lib]
path = "src/lib.rs"

[dependencies]
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"                                                                 # for C library JSON response parsing
spicedb-grpc = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread"] }
tonic = "0.12"
tower = "0.5"
tracing = "0.1"
# Single -sys crate: builds from Go or downloads prebuilt per target.
spicedb-embedded-sys = { path = "spicedb-embedded-sys" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
testcontainers-modules = { version = "0.14", features = [
  "postgres",
  "mysql",
  "cockroach_db",
] }

[lints]
workspace = true
