[package]
name = "spicedb-embedded"
version = "0.6.0"                                                                              # x-release-please-version
edition = "2024"
description = "Embedded SpiceDB for Rust - embedded authorization using the standard gRPC API"
license = "Apache-2.0"
repository = "https://github.com/borkfork/spicedb-embedded"
documentation = "https://docs.rs/spicedb-embedded"
homepage = "https://github.com/borkfork/spicedb-embedded"
# Native library is built or downloaded by spicedb-embedded-sys.
exclude = ["**/*.so", "**/*.dylib", "**/*.dll", "**/*.lib"]
categories = [
  "authentication",
  "api-bindings",
  "development-tools",
  "development-tools::ffi",
  "security",
]
keywords = [
  "spicedb",
  "zanzibar",
  "authorization",
  "access-control",
  "fine-grained",
]

[lib]
path = "src/lib.rs"

[dependencies]
hyper-util = { version = "0.1.20", features = [
  "client-legacy",
  "http1",
  "tokio",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149" # for C library JSON response parsing
spicedb-grpc-tonic = { version = "0.2.0", path = "spicedb-grpc-tonic" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["net", "sync", "rt-multi-thread"] }
tonic = "0.14.5"
tower = "0.5.3"
tracing = "0.1.44"
# Single -sys crate: builds from Go or downloads prebuilt per target. Version required for publish; path used when building.
spicedb-embedded-sys = { version = "0.6.0", path = "spicedb-embedded-sys" } # x-release-please-version

[dev-dependencies]
prost = "0.14.3"
serial_test = "3.4.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
testcontainers-modules = { version = "0.15.0", features = [
  "postgres",
  "mysql",
  "cockroach_db",
] }

[lints]
workspace = true
