[package]
name = "spicedb-embedded-sys-linux-arm64"
version = "0.2.2"
edition = "2024"
description = "Prebuilt SpiceDB C shared library for Linux aarch64 (used by spicedb-embedded)"
license = "Apache-2.0"
repository = "https://github.com/borkfork/spicedb-embedded"
documentation = "https://docs.rs/spicedb-embedded-sys-linux-arm64"
homepage = "https://github.com/borkfork/spicedb-embedded"
keywords = ["spicedb", "ffi", "linux", "aarch64", "arm64"]
categories = ["development-tools::ffi"]
exclude = []

[lib]
path = "src/lib.rs"

[build-dependencies]
spicedb-embedded-native-build = { path = "../spicedb-embedded-native-build", version = "0.2" }
