[package]
name = "spicedb-embedded-sys-linux-x64"
version = "0.2.2"
edition = "2024"
description = "Prebuilt SpiceDB C shared library for Linux x86_64 (used by spicedb-embedded)"
license = "Apache-2.0"
repository = "https://github.com/borkfork/spicedb-embedded"
documentation = "https://docs.rs/spicedb-embedded-sys-linux-x64"
homepage = "https://github.com/borkfork/spicedb-embedded"
keywords = ["spicedb", "ffi", "linux", "x86_64", "native"]
categories = ["development-tools::ffi"]
# Ship the prebuilt .so so crates.io consumers get it without building Go
exclude = []

[lib]
path = "src/lib.rs"

[build-dependencies]
spicedb-embedded-native-build = { path = "../spicedb-embedded-native-build", version = "0.0.0-placeholder" }
