[package]
name = "spicedb-embedded-sys"
version = "0.7.0"                                                                                          # x-release-please-version
edition = "2024"
description = "FFI and native library for SpiceDB C shared library (builds from Go or downloads prebuilt)"
license = "Apache-2.0"
repository = "https://github.com/borkfork/spicedb-embedded"
documentation = "https://docs.rs/spicedb-embedded-sys"
homepage = "https://github.com/borkfork/spicedb-embedded"
keywords = ["spicedb", "ffi", "native"]
categories = ["development-tools::ffi"]
include = ["Cargo.toml", "src/**", "build.rs", "shared/**"]

[package.metadata.docs.rs]
# docs.rs sets DOCS_RS=1, which build.rs checks to skip native library acquisition.
# rustdoc-args (not rustc-args) so the cfg only applies to our docs, not to dependency compilation.
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.14.3"
spicedb-grpc-tonic = { version = "1.0.0", path = "../spicedb-grpc-tonic" }
