[project]
name = "google-docs-example"
version = "0.1.0"
description = "Google Docs-style drive example with SpiceDB embedded"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "spicedb-embedded>=0.5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_docs_example"]

[tool.hatch.build.targets.sdist]
include = ["src/google_docs_example", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
