[package]
name = "google-docs-example"
version = "0.1.0"
edition = "2024"
description = "Google Docs-style drive example with SpiceDB embedded"
license = "Apache-2.0"
publish = false

[lib]
name = "google_docs_example"
path = "src/lib.rs"

[[bin]]
name = "google-docs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
serde_json = "1"
# Use published crate so the example builds without buf (spicedb-grpc-tonic has checked-in generated code).
# For local dev: override with [patch.crates-io] or path = "../../../rust" in this Cargo.toml.
spicedb-embedded = "0.5"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
