[package]
name = "google-docs-example"
version = "0.1.0"
edition = "2024"
description = "Google Docs-style drive example with SpiceDB embedded"
license = "Apache-2.0"
publish = false

[lib]
name = "google_docs_example"
path = "src/lib.rs"

[[bin]]
name = "google-docs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
serde_json = "1"
# Path dep when built in the workspace; for standalone use, replace with spicedb-embedded = "0.7".
spicedb-embedded = { version = "0.7", path = "../../../rust" }
tokio = { version = "1", features = ["full"] }
tower = "0.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
